# ai-headshot-studio

./: .gitignore  AGENTS.md  CHANGELOG.md  CLONE_CONTEXT.md  CLONE_FEATURES.md  Dockerfile  INCIDENTS.md  Makefile  PLAN.md  PRODUCT_ROADMAP.md  PROJECT_MEMORY.md  README.md  UPDATE.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  secret-scan.yml
docs/: AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PLAN.md  PROJECT.md  RELEASE.md  ROADMAP.md  SECURITY.md  SELF_HOSTED_RUNNER.md
scripts/: batch_cli.py  bench_processing.py  run_gitleaks.sh  smoke_api.sh  verify_self_hosted_runner.sh
src/ai_headshot_studio/: __init__.py  app.py  presets.py  processing.py
src/ai_headshot_studio/static/: app.js  index.html  styles.css
static/: app.js  index.html  styles.css
tests/: test_api.py  test_batch_cli.py  test_processing.py  test_static_contract.py
